--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <string name="app_name">Veliby</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="refresh">Mettre à jour</string>
+    <string name="refresh_date">Jamais mis à jour</string>
 
+    <string-array name="color_mode_array">
+        <item>Trouver un vélo</item>
+        <item>Reposer un vélo</item>
+    </string-array>
 </resources>
