--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,30 @@
 <resources>
 
     <string name="app_name">Veliby</string>
-    <string name="action_settings">Settings</string>
+    <string name="ok">D\'accord!</string>
+
+    <string name="welcome_title">Bienvenue sur Véliby!</string>
+    <string name="welcome_introduction">Véliby est une application simple et concise qui vous montre l\'état des stations autour de vous grâce à de simple codes couleurs:</string>
+    <string name="welcome_plenty">5 vélos/points d\'attache ou plus, allez-y!</string>
+    <string name="welcome_some">3&#8211;4 vélos/points d\'attache, attention!</string>
+    <string name="welcome_few">1&#8211;2 vélos/points d\'attache, déconseillé&#8230;</string>
+    <string name="welcome_none">Pas de vélos/points d\'attache :(</string>
+    <string name="welcome_closed">Station fermée</string>
+
+    <string name="welcome_controls">N\'hésitez pas à cliquer sur une station pour avoir plus d\'informations!
+        
+Enfin, 2 boutons vous permettent de contrôler l\'app:</string>
+    <string name="welcome_refresh">Permet de rafraichir les données. La mise à jour est automatique à chaque lancement/changement d\'application.</string>
+    <string name="welcome_mode_find">Les couleurs indiquent le nombre de vélos. Cliquez pour alterner.</string>
+    <string name="welcome_mode_return">Les couleurs indiquent le nombre de vélos. Cliquez pour alterner.</string>
+    
+    <string name="action_mode">Mode d\'affichage</string>
+    <string name="action_mode_find">Vélos disponibles</string>
+    <string name="action_mode_return">Points d\'attaches disponibles</string>
+
+    <string name="action_reload">Mettre à jour</string>
+    <string name="action_reload_start">Mise à jour en cours</string>
+    <string name="action_reload_complete">Mise à jour terminée</string>
 
     <string name="welcome_ok">Compris!</string>
 
