--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,81 +3,80 @@
 
     <string name="app_name">Veliby</string>
 
-    <string name="ok">D\'accord!</string>
+    <string name="ok">Alright!</string>
 
-    <string name="playservice_issue_title">Aïe!</string>
-    <string name="playservice_issue_content">Il semblerait que vous ayez un problème avec les "Google Play Services". Le plan ne se chargera donc pas, mais l\'écran suivant vous invitera à vous rendre sur le Google Play Store pour mettre à jour "Google Play Services".</string>
+    <string name="playservice_issue_title">Ouch!</string>
+    <string name="playservice_issue_content">There seem to be an issue with "Google Play Services". There will be no map, but the next screen will invite you to go on the Google Play Store to update "Google Play Services".</string>
 
-    <string name="welcome_title">Bienvenue sur Véliby!</string>
-    <string name="welcome_introduction">Véliby est une application simple et concise qui vous montre l\'état des stations autour de vous grâce à de simple codes couleurs:</string>
-    <string name="welcome_plenty">5 vélos/points d\'attache ou plus, allez-y!</string>
-    <string name="welcome_some">3&#8211;4 vélos/points d\'attache, attention!</string>
-    <string name="welcome_few">1&#8211;2 vélos/points d\'attache, déconseillé&#8230;</string>
-    <string name="welcome_none">Pas de vélos/points d\'attache :(</string>
-    <string name="welcome_closed">Station fermée</string>
-    <string name="welcome_faved">Station faisant partie de vos favoris. Utilisez un widget pour voire la liste.</string>
-    <string name="welcome_unfaved">Station ne faisant pas partie de vos favoris.</string>
+    <string name="welcome_title">Welcome to Veliby!</string>
+    <string name="welcome_introduction">Veliby is simple and concise application that shows you the state of bike stations around you with a simple color code:</string>
+    <string name="welcome_plenty">5 bikes/stands or more, go for it!</string>
+    <string name="welcome_some">3&#8211;4 bikes/stands, be careful!</string>
+    <string name="welcome_few">1&#8211;2 bikes/stands, unrecommanded&#8230;</string>
+    <string name="welcome_none">No bike/stand :(</string>
+    <string name="welcome_closed">Station closed</string>
+    <string name="welcome_faved">Station in your favorite list. You can use a widget to display your list on your homescreen or lock screen.</string>
+    <string name="welcome_unfaved">Station not in your favorite list.</string>
 
-    <string name="welcome_controls">N\'hésitez pas à cliquer sur une station pour avoir plus d\'informations!
+    <string name="welcome_controls">Don\'t hesitate to click on a station to display more information.
         
-Enfin, 2 boutons vous permettent de contrôler l\'app:</string>
-    <string name="welcome_refresh">Permet de rafraichir les données. La mise à jour est automatique à chaque lancement/changement d\'application.</string>
-    <string name="welcome_mode_find">Les couleurs indiquent le nombre de vélos. Cliquez pour alterner.</string>
-    <string name="welcome_mode_return">Les couleurs indiquent le nombre de points d\'attache. Cliquez pour alterner.</string>
-    <string name="welcome_choosecity">Choisissez une ville à gauche</string>
+Finally, 2 buttons let you control the app:</string>
+    <string name="welcome_refresh">Lets you refresh data. The update is also automatic at each app start/load.</string>
+    <string name="welcome_mode_find">Colors indicate number of available bikes. Click to show bike stands.</string>
+    <string name="welcome_mode_return">Colors indicate number of available bike stands. Click to show bikes.</string>
+    <string name="welcome_choosecity">Choose a city on the left hand side panel</string>
 
-    <string name="action_mode">Mode d\'affichage</string>
-    <string name="action_mode_find">Vélos disponibles</string>
-    <string name="action_mode_return">Points d\'attaches disponibles</string>
+    <string name="action_mode">Display mode</string>
+    <string name="action_mode_find">Available bikes</string>
+    <string name="action_mode_return">Available bike stands</string>
 
-    <string name="action_reload">Mettre à jour</string>
-    <string name="action_reload_start">Mise à jour en cours</string>
-    <string name="action_reload_datarecent">Données déjà à jour</string>
-    <string name="action_reload_complete">Mise à jour terminée</string>
-    <string name="action_reload_failure">Mise à jour échouée: veuillez vérifier votre connection internet</string>
+    <string name="action_reload">Refresh data</string>
+    <string name="action_reload_start">Update started</string>
+    <string name="action_reload_datarecent">Data already up to date</string>
+    <string name="action_reload_complete">Update complete</string>
+    <string name="action_reload_failure">Update failed: please check your Internet connection</string>
     
-    <string name="action_faved">Station maintenant favorite, retrouvez la sur un widget</string>
-    <string name="action_unfaved">Station retirée de vos favoris</string>
+    <string name="action_faved">Station is now a favorite, find it on your widget</string>
+    <string name="action_unfaved">Station removed from your favorites</string>
 
-    <string name="welcome_ok">Compris!</string>
+    <string name="welcome_ok">Understood!</string>
 
-    <string name="refresh">Mettre à jour</string>
-    <string name="refresh_date">Jamais mis à jour</string>
+    <string name="refresh">Update data</string>
+    <string name="refresh_date">Never updated</string>
     
-    <string name="infoview_bonus">Bonus de 15 minutes ajouté à votre compte
-        lors du dépot d\'un vélo dans cette station!</string>
-    <string name="infoview_bank">Station disposant d\'une borne achat de 
-        ticket/rechargement de forfaits.</string>
-    <string name="infoview_stationclosed">Station fermée!</string>
-    <string name="infoview_noinfo">Information indisponible</string>
-    <string name="infoview_favorite">Station favorite</string>
+    <string name="infoview_bonus">15min bonus will be added to your account when retrieving a bike in this station!</string>
+    <string name="infoview_bank">Station equipped with a ticket purchase/recharge system.</string>
+    <string name="infoview_stationclosed">Station closed!</string>
+    <string name="infoview_noinfo">Information unavailable</string>
+    <string name="infoview_favorite">Favorite station</string>
     
-    <string name="widget_stationclosed">Fermée</string>
-    <string name="widget_nofavstation">Aucune station favorite, ajoutez les dans Veliby</string>
+    <string name="widget_stationclosed">Closed</string>
+    <string name="widget_nofavstation">No favorite station, please star one in Veliby</string>
 
     <string-array name="color_mode_array">
-        <item>Trouver un vélo</item>
-        <item>Rendre un vélo</item>
+        <item>Find a bike</item>
+        <item>Retrieve a bike</item>
     </string-array>
 
-    <string name="map_nofav">Aucune station favorite, ajoutez en une pour activer cette vue. Pour cela, choisissez une station et cliquez sur l\'étoile.</string>
-    <string name="map_directionsfailed">Impossible d\'obtenir les directions.</string>
-    <string name="map_nodistance">Distance indisponible</string>
+    <string name="map_nofav">No favorite station, mark one as favorite to activate this mode. To do so, choose a station and click on the star.</string>
+    <string name="map_directionsfailed">Impossible to obtain directions.</string>
+    <string name="map_nodistance">Distance unavailable</string>
+    <string name="map_meters">meters</string>
 
-    <string name="map_stationinfo_getdirections">Obtenir directions</string>
-    <string name="map_stationinfo_toggle">Afficher/masquer infos complémentaires</string>
+    <string name="map_stationinfo_getdirections">Get directions</string>
+    <string name="map_stationinfo_toggle">Display/hide additional info</string>
 
     <string-array name="menu_left_items">
-        <item>Aide</item>
+        <item>Help</item>
         <item></item>
         <item>menu_left_modes:force_expand:one_selection:Modes</item>
         <item></item>
-        <item>menu_left_cities:normal:one_selection:Villes</item>
+        <item>menu_left_cities:normal:one_selection:Cities</item>
     </string-array>
 
     <string-array name="menu_left_modes">
-        <item>Toutes les Stations</item>
-        <item>Stations Favorites</item>
+        <item>All stations</item>
+        <item>Favorites Stations</item>
     </string-array>
 
     <string-array name="menu_left_cities">
@@ -98,7 +97,7 @@ Enfin, 2 boutons vous permettent de contrôler l\'app:</string>
         <item>Namur</item>
         <item>Nancy</item>
         <item>Creteil</item>
-        <item>Bruxelles-Capitale</item>
+        <item>Bruxelles-City</item>
         <item>Cergy-Pontoise</item>
         <item>Vilnius</item>
         <item>Toyama</item>
@@ -108,6 +107,6 @@ Enfin, 2 boutons vous permettent de contrôler l\'app:</string>
         <item>Besancon</item>
     </string-array>
 
-    <string name="menu_open">Ouvrir Menu</string>
-    <string name="menu_close">Fermer Menu</string>
+    <string name="menu_open">Open Menu</string>
+    <string name="menu_close">Close Menu</string>
 </resources>
