--- a/veliby/src/main/res/values/strings.xml
+++ b/veliby/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="welcome_introduction">Veliby is simple and concise application that shows you the state of bike stations around you with a simple color code:</string>
     <string name="welcome_plenty">5 bikes/stands or more, go for it!</string>
     <string name="welcome_some">3&#8211;4 bikes/stands, be careful!</string>
-    <string name="welcome_few">1&#8211;2 bikes/stands, unrecommanded&#8230;</string>
+    <string name="welcome_few">1&#8211;2 bikes/stands, not recommended&#8230;</string>
     <string name="welcome_none">No bike/stand :(</string>
     <string name="welcome_closed">Station closed</string>
     <string name="welcome_faved">Station in your favorite list. You can use a widget to display your list on your homescreen or lock screen.</string>
@@ -35,6 +35,7 @@ Finally, 2 buttons let you control the app:</string>
     <string name="action_reload_datarecent">Data already up to date</string>
     <string name="action_reload_complete">Update complete</string>
     <string name="action_reload_failure">Update failed: please check your Internet connection</string>
+    <string name="action_reload_contractfailure">Contracts update failed: check your Internet connection</string>
     
     <string name="action_faved">Station is now a favorite, find it on your widget</string>
     <string name="action_unfaved">Station removed from your favorites</string>
@@ -43,9 +44,7 @@ Finally, 2 buttons let you control the app:</string>
 
     <string name="refresh">Update data</string>
     <string name="refresh_date">Never updated</string>
-    
-    <string name="infoview_bonus">15min bonus will be added to your account when retrieving a bike in this station!</string>
-    <string name="infoview_bank">Station equipped with a ticket purchase/recharge system.</string>
+
     <string name="infoview_stationclosed">Station closed!</string>
     <string name="infoview_noinfo">Information unavailable</string>
     <string name="infoview_favorite">Favorite station</string>
@@ -84,4 +83,6 @@ Finally, 2 buttons let you control the app:</string>
 
     <string name="menu_open">Open Menu</string>
     <string name="menu_close">Close Menu</string>
+    <string name="menu_no_city">No city downloaded: please check your internet connection and hit reload.</string>
+    <string name="action_reload_nomap">The plan isn\'t loaded yet, please wait a few seconds to retry or restart app.</string>
 </resources>
